dataobject manage fixes, structure bar z-index fix, krakow glosuj

--- a/app/Plugin/Dane/webroot/less/header-vote.less
+++ b/app/Plugin/Dane/webroot/less/header-vote.less
@@ -4,6 +4,20 @@
   background: #fff;
   padding: 10px 0;
 
+  h3 {
+
+    .glyphicon {
+      margin-right: 10px;
+
+      &:hover {
+        cursor: pointer;
+        color: #111;
+      }
+
+    }
+
+  }
+
   .progress {
 
     margin-bottom: 0;
