--- a/app/webroot/less/structure.less
+++ b/app/webroot/less/structure.less
@@ -311,7 +311,7 @@ body {
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 900;
+        //z-index: 900;
 
         a {
             color: #ffffff;
@@ -930,5 +930,9 @@ body {
 @media (min-width: 768px) {
     #_wrapper #_mPCockpitMobile {
         display: none;
+    }
+
+    #_mPCockpit {
+        z-index: 900;
     }
 }
